--- a/ShortBus.Tests/packages.config
+++ b/ShortBus.Tests/packages.config
@@ -5,6 +5,6 @@
   <package id="Castle.Core" version="3.2.2" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="NUnit" version="2.5.9.10348" />
-  <package id="structuremap" version="2.6.3" />
+  <package id="structuremap" version="3.0.4.125" targetFramework="net45" />
   <package id="Unity" version="3.0.1304.1" targetFramework="net45" />
 </packages>
